# stellargraph

./: .codeclimate.yml  .dockerignore  .gitignore  .readthedocs.yaml  .yamllint.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_PROCEDURE.md  codecov.yml  directory-hash.py  docker-compose.yml  meta.yaml  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py
.buildkite/: docker-compose.yml  notebook-parameters.yml  pipeline.yml  pushlogs.sh  script.sh
.buildkite/hooks/: pre-command
.buildkite/steps/: .manage-images.sh.swp  check-copyright-headers.sh  (+8 more)
.github/: issue_template.md
0/: saved_model.pb
demos/: README.md  StellarGraph_examples.ipynb  genes.ipynb  node2vec.ipynb  node2vec_mockup.ipynb  requirements.txt
docs/: 404.rst  Makefile  api.rst  api.txt  conf.py  demos  examples.txt  glossary.rst  hinsage.rst  hinsage.txt  index.rst  index.txt  loading-pandas.ipynb  overview.txt  quickstart.txt  requirements.txt  spelling_wordlist.txt
scripts/: README.md  ci_workflow_notebook_list.py  create-nbsphinx-links.sh  demo_indexing.py  demo_table.py  format_notebooks.py  notebook_text_checker.py  requirements.txt  test_demos.py  whitespace.sh
stellar/: README.md  __init__.py  globals.py
stellargraph/: __init__.py  calibration.py  ensemble.py  globalvar.py  link_prediction.py  losses.py  random.py  version.py
tests/: __init__.py  test_aaa_on_gpu.py  test_black.py  test_calibration.py  test_ensemble.py  test_init.py  test_link_prediction.py  test_losses.py  test_on_gpu.py  test_random.py
(+750 files in other folders)
